--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "react-upload",
     "upload"
   ],
-  "homepage": "http://github.com/react-component/upload",
+  "homepage": "http://github.com/kasra-ansari/upload",
   "repository": {
     "type": "git",
-    "url": "git@github.com:react-component/upload.git"
+    "url": "http://github.com/kasra-ansari/upload.git"
   },
   "bugs": {
     "url": "http://github.com/react-component/upload/issues"
